# reflectomITER

./: .gitignore  CMakeLists.txt  README.md
include/fdtd/: DivCleaning.H  EHJSolver.H  EHSolver.H  PMLSolver.H
include/io/: Config.H  ConfigHelpers.H  FieldOutputManager.H  IWrapActor.H  ImasReader.H
include/sources/: ADEPlasma.H  PointSource.H  Source.H
include/utils/: Constants.H  HelperFunctions.H  Stencils.H
inputs/: input.txt  input_IMAS.txt
iwrap/: README.md  reflectomITER_iwrap.yml  reflectomITER_python_actor.py  run_reflectomITER_actor.py  test_iwrap_adapter.cpp
iwrap/reflectomITER_actor/: actor.py  config.py  launcher.py  sources.py
iwrap/reflectomiter_actor/: input_generation.py
python/: dimensions.py  math_convert_for_README.py  plot_amrex.ipynb  plot_amrex_data.py
src/: main.cpp  main_page.md
src/fdtd/: DivCleaning.cpp  EHJSolver.cpp  EHSolver.cpp  PMLSolver.cpp
src/io/: Config.cpp  IWrapActor.cpp  ImasReader.cpp
src/sources/: ADEPlasma.cpp  PointSource.cpp
src/utils/: HelperFunctions.cpp
